[gd_scene load_steps=2 format=2]

[ext_resource path="res://characters/animal_parts/AnimalBuilder.gd" type="Script" id=1]

[node name="AnimalBuilder" type="Node2D"]
script = ExtResource( 1 )

[node name="BoundingBox" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, 0, 100, 0, 100, 100, 0, 100 )

[node name="Polygons" type="Node2D" parent="."]

[node name="Skeleton2D" type="Skeleton2D" parent="."]
visible = false

[node name="Hip" type="Bone2D" parent="Skeleton2D"]
position = Vector2( 40, 40 )
rest = Transform2D( 1, 0, 0, 1, 40, 40 )

[node name="Tail" type="Bone2D" parent="Skeleton2D/Hip"]
position = Vector2( -24, 8 )
rest = Transform2D( 1, 0, 0, 1, -24, 8 )

[node name="RearLegR" type="Bone2D" parent="Skeleton2D/Hip"]
position = Vector2( -8, 24 )
rest = Transform2D( 1, 0, 0, 1, -8, 24 )

[node name="RearLegL" type="Bone2D" parent="Skeleton2D/Hip"]
position = Vector2( 8, 24 )
rest = Transform2D( 1, 0, 0, 1, 8, 24 )

[node name="Chest" type="Bone2D" parent="Skeleton2D/Hip"]
position = Vector2( 80, 0 )
rest = Transform2D( 1, 0, 0, 1, 80, 0 )

[node name="FrontLegR" type="Bone2D" parent="Skeleton2D/Hip/Chest"]
position = Vector2( -8, 24 )
rest = Transform2D( 1, 0, 0, 1, -8, 24 )

[node name="FrontLegL" type="Bone2D" parent="Skeleton2D/Hip/Chest"]
position = Vector2( 8, 24 )
rest = Transform2D( 1, 0, 0, 1, 8, 24 )

[node name="Head" type="Bone2D" parent="Skeleton2D/Hip/Chest"]
position = Vector2( 24, -24 )
rest = Transform2D( 1, 0, 0, 1, 24, -24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Skeleton2D"]
